<resources>
    <string name="app_name">Cinema</string>

    <!-- Messages-->
    <string name="unknown_error">Unknown error</string>
    <string name="empty_icon">¯\\\\_(ツ)_/¯</string>
    <string name="movie_list_empty">Sorry, we couldn\'t find any movie\n of this type</string>
    <string name="tv_list_empty">Sorry, we couldn\'t find any tv\n of this type</string>
    <string name="added_to_favorites">Added to favorites!</string>
    <string name="already_exist">Already in favorites!</string>

    <!-- List items -->
    <string name="movie_poster">Movie poster</string>
    <string name="tv_poster">Tv poster</string>

    <!-- Content Items -->
    <string name="cast_profile_image">Cast profile image</string>
    <string name="release_date_title">Release Date</string>
    <string name="first_air_date_title">First On Air Date</string>
    <string name="overview_label">Overview</string>
    <string name="top_billed_cast">Top Billed Cast</string>
    <string name="trailer_label">Trailer</string>
    <string name="reviews">Reviews</string>
    <string name="known_for_label">Known For</string>
    <string name="gender_label">Gender</string>
    <string name="birthday_label">Birthday</string>
    <string name="place_of_birth_label">Place of birth</string>
    <string name="official_site_label">Official site</string>


    <!-- Bottom navigation -->
    <string name="navigation_movies">MOVIES</string>
    <string name="navigation_tv">TV</string>
    <string name="navigation_favorite">FAVORITE</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
