<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:shownIn="@layout/activity_person">

    <data>

        <variable
            name="personDetailViewModel"
            type="lv.st.sbogdano.cinema.person.PersonDetailViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/guideline2">

        <ImageView
            android:id="@+id/person_image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:transitionName="@{@string/cast_transition + personDetailViewModel.person.id}"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:loadUrl="@{`original` + personDetailViewModel.person.profilePath}"
            tools:srcCompat="@tools:sample/avatars[4]" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <TextView
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@{personDetailViewModel.person.name}"
            android:textAppearance="@style/Base.TextAppearance.MaterialComponents.Headline6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Brad Pitt" />

        <TextView
            android:id="@+id/known_for_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:text="@string/known_for_label"
            android:textAllCaps="true"
            android:textAppearance="@style/Base.TextAppearance.MaterialComponents.Subtitle2"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/name" />

        <TextView
            android:id="@+id/known_for"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@{personDetailViewModel.person.knownForDepartment}"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/known_for_label"
            tools:text="Acting" />

        <TextView
            android:id="@+id/gender_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/gender_label"
            android:textAllCaps="true"
            android:textAppearance="@style/Base.TextAppearance.MaterialComponents.Subtitle2"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/known_for" />

        <TextView
            android:id="@+id/gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@{personDetailViewModel.person.gender == 2 ? &quot;Male&quot; : &quot;Female&quot;}"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/gender_label"
            tools:text="Male" />

        <TextView
            android:id="@+id/birthday_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/birthday_label"
            android:textAllCaps="true"
            android:textAppearance="@style/Base.TextAppearance.MaterialComponents.Subtitle2"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/gender" />

        <TextView
            android:id="@+id/birthday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@{personDetailViewModel.person.birthDay}"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/birthday_label"
            tools:text="1963-12-18" />

        <TextView
            android:id="@+id/place_of_birth_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/place_of_birth_label"
            android:textAllCaps="true"
            android:textAppearance="@style/Base.TextAppearance.MaterialComponents.Subtitle2"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/birthday"
            app:visible="@{!personDetailViewModel.person.placeOfBirth.isEmpty()}" />

        <TextView
            android:id="@+id/place_of_birth"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@{personDetailViewModel.person.placeOfBirth}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/place_of_birth_label"
            tools:text="Shawnee, Oklahoma, USA" />

        <TextView
            android:id="@+id/official_site_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/official_site_label"
            android:textAllCaps="true"
            android:textAppearance="@style/Base.TextAppearance.MaterialComponents.Subtitle2"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/place_of_birth"
            app:visible="@{!personDetailViewModel.person.homePage.isEmpty()}" />

        <TextView
            android:id="@+id/official_site"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:autoLink="web"
            android:text="@{personDetailViewModel.person.homePage}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/official_site_label"
            tools:text="www.site.com" />

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/view_pager"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:elevation="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/official_site"
            app:sectionAdapter="@{personDetailViewModel.person.id}">

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabs"
                style="@style/Widget.MaterialComponents.TabLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/primaryTextColor"
                app:setupWithViewPager="@{viewPager}"
                app:tabIndicatorColor="@color/secondaryColor"
                app:tabTextColor="@color/secondaryTextColor" />

        </androidx.viewpager.widget.ViewPager>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>